tests/error/linear_region_param_unconsumed.vow
// TEST: error-code RegionLinear
module LinearRegionParamUnconsumed

linear struct Handle {
    fd: i64,
}

fn ignore(h: Handle) -> i32 {
    0
}
